Add /api/user
